--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-tsparticles": "^1.40.1",
     "style-components": "^0.1.0",
     "styled-components": "^5.3.3",
     "tsparticles": "^1.39.2",
