--- a/package.json
+++ b/package.json
@@ -3,9 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emailjs/browser": "^3.6.2",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "emailjs": "^3.8.0",
+    "emailjs-com": "^3.2.0",
+    "firebase": "^8.10.1",
     "firebase-tools": "^10.4.0",
     "framer-motion": "^6.2.8",
     "react": "^17.0.2",
